[gd_scene load_steps=13 format=2]

[ext_resource path="res://img/enemigo.png" type="Texture" id=1]
[ext_resource path="res://Objetos/Personajes/Enemigo(MEF)/maquina_estados.gd" type="Script" id=2]
[ext_resource path="res://Objetos/Personajes/Enemigo(MEF)/enemigo(mef).gd" type="Script" id=3]
[ext_resource path="res://Objetos/Personajes/Enemigo(MEF)/ir_a.gd" type="Script" id=4]
[ext_resource path="res://Objetos/Personajes/Enemigo(MEF)/buscar.gd" type="Script" id=5]
[ext_resource path="res://Objetos/Personajes/Enemigo(MEF)/quieto.gd" type="Script" id=6]
[ext_resource path="res://Objetos/Personajes/Enemigo(MEF)/interactuar.gd" type="Script" id=7]
[ext_resource path="res://Objetos/Personajes/Enemigo(MEF)/atacar.gd" type="Script" id=8]
[ext_resource path="res://Objetos/Personajes/Enemigo(MEF)/paralizado.gd" type="Script" id=9]

[sub_resource type="CircleShape2D" id=5]
radius = 8.0

[sub_resource type="CanvasItemMaterial" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 9 )

[node name="Enemigo" type="KinematicBody2D" groups=["enemigo"]]
script = ExtResource( 3 )

[node name="fisicas_paredes" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.0980392, 0.980392, 0.0196078, 1 )
material = SubResource( 4 )
texture = ExtResource( 1 )

[node name="fisicas_balas" type="Area2D" parent="."]

[node name="espacio_balas" type="CollisionShape2D" parent="fisicas_balas"]
shape = SubResource( 2 )

[node name="maquina_estados" type="Node" parent="."]
script = ExtResource( 2 )
estado_inicio = NodePath("quieto")

[node name="quieto" type="Node" parent="maquina_estados"]
script = ExtResource( 6 )

[node name="buscar" type="Node" parent="maquina_estados"]
script = ExtResource( 5 )

[node name="ir_a" type="Node" parent="maquina_estados"]
script = ExtResource( 4 )

[node name="interactuar" type="Node" parent="maquina_estados"]
script = ExtResource( 7 )

[node name="atacar" type="Node" parent="maquina_estados"]
script = ExtResource( 8 )

[node name="paralizado" type="Node" parent="maquina_estados"]
script = ExtResource( 9 )

[node name="acciones_compuestas" type="Node" parent="."]

[node name="sistema_de_planeacion" type="Node" parent="."]

[node name="Sensores" type="Node2D" parent="."]

[node name="pseudo_vision" type="Area2D" parent="Sensores"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sensores/pseudo_vision"]
position = Vector2( 62.0625, -8.14869 )
scale = Vector2( 1.20276, 0.927632 )
polygon = PoolVector2Array( 161.244, 146.77, 267.665, 8.7844, 161.244, -129.201, -51.6, 8.7844 )

[node name="vision_corta" type="RayCast2D" parent="Sensores"]
enabled = true
cast_to = Vector2( 30, 0 )

[node name="tempo" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="brazo_sup" type="Position2D" parent="."]
position = Vector2( 8, -7 )

[node name="brazo_inf" type="Position2D" parent="."]
position = Vector2( 8, 7 )

[connection signal="body_entered" from="fisicas_balas" to="." method="_on_Area2D_body_entered"]
[connection signal="area_entered" from="Sensores/pseudo_vision" to="." method="_on_pseudo_vision_area_entered"]
[connection signal="body_entered" from="Sensores/pseudo_vision" to="." method="_on_pseudo_vision_body_entered"]
